Add to home screen

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
 	<link rel="manifest" href="/static/favicons/manifest.json">
 	<link rel="mask-icon" href="/static/favicons/safari-pinned-tab.svg" color="#5bbad5">
 	<link rel="shortcut icon" href="/static/favicons/favicon.ico">
-	<meta name="apple-mobile-web-app-title" content="hifebriansyah">
 	<meta name="application-name" content="hifebriansyah">
 	<meta name="msapplication-config" content="/static/favicons/browserconfig.xml">
 	<meta name="theme-color" content="#404040">
@@ -39,8 +38,16 @@
 	<!-- AMP -->
 	<link rel="amphtml" href="http://hifebriansyah.com/index.amp.html">
 
-	<!-- lang -->
+	<!-- Lang -->
 	<link rel="alternate" href="http://hifebriansyah.com" hreflang="en-us" />
+
+	<!-- Chrome App -->
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="mobile-web-app-capable" content="yes" />
+
+	<!-- Safari App -->
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-title" content="hifebriansyah">
 </head>
 <body>
 	<div class="container">
