--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 </head>
 <body>
 	<div class="container">
+
+		<!-- 1nd part of paper -->
 		<div class="paper">
 			<div class="top">
 				<div class="photo"></div>
@@ -58,7 +60,7 @@
 					<h1>M.Febriansyah</h1>
 					<div class="marquee">
 						<h2>Enthusiast Programmer</h2>
-						<h2>Passionate Thinker</h2>
+						<h2>Scrum Practitioner</h2>
 						<h2>Innovative Learner</h2>
 						&nbsp;
 					</div>
@@ -72,12 +74,13 @@
 			<div class="bottom">
 				<div class="headings">
 					<h3>About <a href="#">Me</a></h3>
-					<p>Hi I'm Febriansyah! I've been in love with programming since junior high school. My strong points are in website development, API development and web base application development.</p>
+					<p>Hi I'm Febriansyah! I've been in love with programming since junior high school. My strong points are in website, API and application development.</p>
+					<p>Yeah, I certified as a Professional Scrum Master & Profesional IT Engineer!</p>
 				</div>
 				<div class="info">
 					<h4>
 						<span>Experience</span>
-						<span>8+ Years</span>
+						<span>9+ Years</span>
 					</h4>
 					<h4>
 						<span>Birth</span>
@@ -96,8 +99,219 @@
 						<a href="tel:+6208989090112">+62 898 9090 112</a>
 					</h4>
 				</div>
-				<div class="buttons">
-					<a href="mailto:hifebriansyah@gmail.com?subject=CV Request&body=Hi, I've seen Your vCard and I would love to get Your Curriculum Vitae (CV), Regards.">GET CURRICULUM VITAE</a>
+			</div>
+		</div>
+
+		<!-- 2nd part of paper -->
+		<div class="separator">Professional Certifications</div>
+		<div class="paper">
+			<div class="left" style="background-image: url(certificates/psm-1-min.jpg)"></div>
+			<div class="right">
+				<h5>Professional Scrum Master I</h5>
+				<div class="info">
+					<h4>
+						<span>Date</span>
+						<span>December 2018</span>
+					</h4>
+					<h4>
+						<span>Investation</span>
+						<span>IDR 10.500.000</span>
+					</h4>
+					<h4>
+						<span>Publisher</span>
+						<a target="_blank" href="//scrum.org">scrum.org</a>
+					</h4>
+				</div>
+			</div>
+
+			<div class="clear"></div>
+
+			<div class="left crop" style="background-image: url(certificates/ccit-min.jpg)"></div>
+			<div class="right">
+				<h5>Professional IT Engineer</h5>
+				<div class="info">
+					<h4>
+						<span>Date</span>
+						<span>July 2010</span>
+					</h4>
+					<h4>
+						<span>Investation</span>
+						<span>IDR 20.800.000</span>
+					</h4>
+					<h4>
+						<span>Publisher</span>
+						<a target="_blank" href="//ccit.eng.ui.ac.id">ccit.eng.ui.ac.id</a>
+					</h4>
+				</div>
+			</div>
+		</div>
+
+		<!-- 3nd part of paper -->
+		<div class="separator">Premium Course Certifications</div>
+		<div class="paper">
+			<div class="left" style="background-image: url(certificates/UC-3DXKIJZQ-min.jpg)"></div>			
+			<div class="right">
+				<h5>Scrum Certification Prep +Scrum Master+ Agile Scrum Training</h5>
+				<div class="info">
+					<h4>
+						<span>Date</span>
+						<span>December 2018</span>
+					</h4>
+					<h4>
+						<span>Investation</span>
+						<span>IDR 2.730.000</span>
+					</h4>
+					<h4>
+						<span>Publisher</span>
+						<a target="_blank" href="//scrum.org">udemy.com</a>
+					</h4>
+				</div>
+			</div>
+
+			<div class="clear"></div>
+
+			<div class="left" style="background-image: url(certificates/UC-Y8YHIUDQ-min.jpg)"></div>
+			<div class="right">
+				<h5>iOS 10 & Swift 3: From Beginner to Paid Professional™</h5>
+				<div class="info">
+					<h4>
+						<span>Date</span>
+						<span>January 2018</span>
+					</h4>
+					<h4>
+						<span>Investation</span>
+						<span>IDR 2.703.000</span>
+					</h4>
+					<h4>
+						<span>Publisher</span>
+						<a target="_blank" href="//scrum.org">udemy.com</a>
+					</h4>
+				</div>
+			</div>
+
+			<div class="clear"></div>
+
+			<div class="left" style="background-image: url(certificates/UC-PS48YDIK-min.jpg)"></div>
+			<div class="right">
+				<h5>Advanced CSS and Sass: Flexbox, Grid, Animations and More!</h5>
+				<div class="info">
+					<h4>
+						<span>Date</span>
+						<span>June 2018</span>
+					</h4>
+					<h4>
+						<span>Investation</span>
+						<span>IDR 2.713.000</span>
+					</h4>
+					<h4>
+						<span>Publisher</span>
+						<a target="_blank" href="//scrum.org">udemy.com</a>
+					</h4>
+				</div>
+			</div>
+			
+			<div class="clear"></div>
+
+			<div class="left" style="background-image: url(certificates/UC-LKY8DQ0Y-min.jpg)"></div>			
+			<div class="right">
+				<h5>Build Responsive Real World Websites with HTML5 and CSS3</h5>
+				<div class="info">
+					<h4>
+						<span>Date</span>
+						<span>July 2018</span>
+					</h4>
+					<h4>
+						<span>Investation</span>
+						<span>IDR 2.783.000 </span>
+					</h4>
+					<h4>
+						<span>Publisher</span>
+						<a target="_blank" href="//scrum.org">udemy.com</a>
+					</h4>
+				</div>
+			</div>
+
+			<div class="clear"></div>
+
+			<div class="left" style="background-image: url(certificates/UC-F88GR8OO-min.jpg)"></div>			
+			<div class="right">
+				<h5>Welcome to Cinematography for 2D Animation Essentials</h5>
+				<div class="info">
+					<h4>
+						<span>Date</span>
+						<span>September 2018</span>
+					</h4>
+					<h4>
+						<span>Investation</span>
+						<span>IDR 424.000</span>
+					</h4>
+					<h4>
+						<span>Publisher</span>
+						<a target="_blank" href="//udemy.com">udemy.com</a>
+					</h4>
+				</div>
+			</div>
+
+			<div class="clear"></div>
+
+			<div class="left" style="background-image: url(certificates/UC-NBB91FTN-min.jpg)"></div>			
+			<div class="right">
+				<h5>The Complete React Native and Redux Course</h5>
+				<div class="info">
+					<h4>
+						<span>Date</span>
+						<span>May 2018</span>
+					</h4>
+					<h4>
+						<span>Investation</span>
+						<span>IDR 1.305.000</span>
+					</h4>
+					<h4>
+						<span>Publisher</span>
+						<a target="_blank" href="//udemy.com">udemy.com</a>
+					</h4>
+				</div>
+			</div>
+
+			<div class="clear"></div>
+
+			<div class="left" style="background-image: url(certificates/UC-8VXKKD3I-min.jpg)"></div>			
+			<div class="right">
+				<h5>Docker Mastery: The Complete Toolset From a Docker Captain</h5>
+				<div class="info">
+					<h4>
+						<span>Date</span>
+						<span>August 2018</span>
+					</h4>
+					<h4>
+						<span>Investation</span>
+						<span>IDR 2.087.000</span>
+					</h4>
+					<h4>
+						<span>Publisher</span>
+						<a target="_blank" href="//scrum.org">udemy.com</a>
+					</h4>
+				</div>
+			</div>
+
+			<div class="clear"></div>
+			
+			<div class="left" style="background-image: url(certificates/UC-6BC0M94P-min.jpg)"></div>
+			<div class="right">
+				<h5>Unity Game Development Academy: Make 2D & 3D Games</h5>
+				<div class="info">
+					<h4>
+						<span>Date</span>
+						<span>December 2017</span>
+					</h4>
+					<h4>
+						<span>Investation</span>
+						<span>IDR 2.834.000</span>
+					</h4>
+					<h4>
+						<span>Publisher</span>
+						<a target="_blank" href="//udemy.com">udemy.com</a>
+					</h4>
 				</div>
 			</div>
 		</div>
