--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     </script>
 
     <!-- Styling -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 	<link rel="stylesheet" href="static/libs/font-awesome/font-awesome.min.css">
 	<link rel="stylesheet" href="static/styles/vcard.css">
 
@@ -81,7 +82,7 @@
 					<div class="icons">
 						<a target="_blank" href="//www.github.com/hifebriansyah" class="github-alt" title="github"><i class="fa fa-github-alt"></i></a>
 						<a target="_blank" href="//www.linkedin.com/in/muhammad-febriansyah" class="linkedin" title="linkedin"><i class="fa fa-linkedin"></i></a>
-						<a target="_blank" href="//www.youtube.com/channel/UCaW6-tkir5lUNJglD3Y50-Q" class="youtube-play" title="youtube"><i class="fa fa-youtube-play"></i></a>
+						<a target="_blank" href="//www.youtube.com/hifebriansyah" class="youtube-play" title="youtube"><i class="fa fa-youtube-play"></i></a>
 					</div>
 				</div>
 			</div>
@@ -117,19 +118,19 @@
 		</div>
 
 		<!-- 2nd part of paper -->
-		<div class="separator">Professional Certifications</div>
+		<div class="separator">1. Professional Certifications</div>
 		<div class="paper">
-			<div class="left" style="background-image: url(certificates/psm-1-min.jpg)"></div>
+			<div class="left" style="background-image: url(certificates/pspo-1.jpeg)"></div>
 			<div class="right">
-				<h5>Professional Scrum Master I</h5>
+				<h5>Professional Scrum Product Owner I</h5>
 				<div class="info">
 					<h4>
 						<span>Date</span>
-						<span>December 2018</span>
+						<span>January 2019</span>
 					</h4>
 					<h4>
 						<span>Investation</span>
-						<span>IDR 10.500.000</span>
+						<span>IDR 11.000.000</span>
 					</h4>
 					<h4>
 						<span>Publisher</span>
@@ -140,7 +141,28 @@
 
 			<div class="clear"></div>
 
-			<div class="left crop" style="background-image: url(certificates/ccit-min.jpg)"></div>
+			<div class="left" style="background-image: url(certificates/psm-1.jpeg)"></div>
+			<div class="right">
+				<h5>Professional Scrum Master I</h5>
+				<div class="info">
+					<h4>
+						<span>Date</span>
+						<span>December 2018</span>
+					</h4>
+					<h4>
+						<span>Investation</span>
+						<span>IDR 10.200.000</span>
+					</h4>
+					<h4>
+						<span>Publisher</span>
+						<a target="_blank" href="//scrum.org">scrum.org</a>
+					</h4>
+				</div>
+			</div>
+
+			<div class="clear"></div>
+
+			<div class="left crop" style="background-image: url(certificates/ccit.jpeg)"></div>
 			<div class="right">
 				<h5>Professional IT Engineer</h5>
 				<div class="info">
@@ -160,10 +182,75 @@
 			</div>
 		</div>
 
-		<!-- 3nd part of paper -->
-		<div class="separator">Premium Course Certifications</div>
+		<!-- 3rd part of paper -->
+		<div class="separator">2. Honorary Certifications</div>
 		<div class="paper">
-			<div class="left" style="background-image: url(certificates/UC-3DXKIJZQ-min.jpg)"></div>			
+			<div class="left crop" style="background-image: url(certificates/ism-1.jpeg)"></div>
+			<div class="right">
+				<h5>Indonesia Scrum Master I</h5>
+				<div class="info">
+					<h4>
+						<span>Date</span>
+						<span>December 2018</span>
+					</h4>
+					<h4>
+						<span>Financial Aid</span>
+						<span>IDR 1.000.000</span>
+					</h4>
+					<h4>
+						<span>Publisher</span>
+						<a target="_blank" href="//ekipa.co.id">ekipa.co.id</a>
+					</h4>
+				</div>
+			</div>
+		</div>
+
+		<!-- 4th part of paper -->
+		<div class="separator">3. Premium Course Certifications</div>
+		<div class="paper">
+			<div class="left" style="background-image: url(certificates/c1.jpeg)"></div>
+			<div class="right">
+				<h5>Agile Planning for Software Products</h5>
+				<div class="info">
+					<h4>
+						<span>Date</span>
+						<span>Januari 2019</span>
+					</h4>
+					<h4>
+						<span>Financial Aid</span>
+						<span>IDR 2.065.000</span>
+					</h4>
+					<h4>
+						<span>Publisher</span>
+						<a target="_blank" href="//ualberta.ca">ualberta.ca</a>
+					</h4>
+				</div>
+			</div>
+
+			<div class="clear"></div>
+
+			<div class="left" style="background-image: url(certificates/volkerdon.jpeg)"></div>	
+			<div class="right">
+				<h5>Product Owner Preparation Course</h5>
+				<div class="info">
+					<h4>
+						<span>Date</span>
+						<span>December 2018</span>
+					</h4>
+					<h4>
+						<span>Investation</span>
+						<span>IDR 300.000</span>
+					</h4>
+					<h4>
+						<span>Publisher</span>
+						<a target="_blank" href="//volkerdon.com">volkerdon.com</a>
+					</h4>
+				</div>
+			</div>
+
+			<div class="clear"></div>
+
+			<div class="left" style="background-image: url(certificates/UC-3DXKIJZQ.jpeg)"></div>			
 			<div class="right">
 				<h5>Scrum Certification Prep +Scrum Master+ Agile Scrum Training</h5>
 				<div class="info">
@@ -173,81 +260,18 @@
 					</h4>
 					<h4>
 						<span>Investation</span>
-						<span>IDR 2.730.000</span>
+						<span>IDR 2.700.000</span>
 					</h4>
 					<h4>
 						<span>Publisher</span>
-						<a target="_blank" href="//scrum.org">udemy.com</a>
+						<a target="_blank" href="//udemy.com">udemy.com</a>
 					</h4>
 				</div>
 			</div>
 
 			<div class="clear"></div>
 
-			<div class="left" style="background-image: url(certificates/UC-Y8YHIUDQ-min.jpg)"></div>
-			<div class="right">
-				<h5>iOS 10 & Swift 3: From Beginner to Paid Professional™</h5>
-				<div class="info">
-					<h4>
-						<span>Date</span>
-						<span>January 2018</span>
-					</h4>
-					<h4>
-						<span>Investation</span>
-						<span>IDR 2.703.000</span>
-					</h4>
-					<h4>
-						<span>Publisher</span>
-						<a target="_blank" href="//scrum.org">udemy.com</a>
-					</h4>
-				</div>
-			</div>
-
-			<div class="clear"></div>
-
-			<div class="left" style="background-image: url(certificates/UC-PS48YDIK-min.jpg)"></div>
-			<div class="right">
-				<h5>Advanced CSS and Sass: Flexbox, Grid, Animations and More!</h5>
-				<div class="info">
-					<h4>
-						<span>Date</span>
-						<span>June 2018</span>
-					</h4>
-					<h4>
-						<span>Investation</span>
-						<span>IDR 2.713.000</span>
-					</h4>
-					<h4>
-						<span>Publisher</span>
-						<a target="_blank" href="//scrum.org">udemy.com</a>
-					</h4>
-				</div>
-			</div>
-			
-			<div class="clear"></div>
-
-			<div class="left" style="background-image: url(certificates/UC-LKY8DQ0Y-min.jpg)"></div>			
-			<div class="right">
-				<h5>Build Responsive Real World Websites with HTML5 and CSS3</h5>
-				<div class="info">
-					<h4>
-						<span>Date</span>
-						<span>July 2018</span>
-					</h4>
-					<h4>
-						<span>Investation</span>
-						<span>IDR 2.783.000 </span>
-					</h4>
-					<h4>
-						<span>Publisher</span>
-						<a target="_blank" href="//scrum.org">udemy.com</a>
-					</h4>
-				</div>
-			</div>
-
-			<div class="clear"></div>
-
-			<div class="left" style="background-image: url(certificates/UC-F88GR8OO-min.jpg)"></div>			
+			<div class="left" style="background-image: url(certificates/UC-F88GR8OO.jpeg)"></div>			
 			<div class="right">
 				<h5>Welcome to Cinematography for 2D Animation Essentials</h5>
 				<div class="info">
@@ -257,7 +281,7 @@
 					</h4>
 					<h4>
 						<span>Investation</span>
-						<span>IDR 424.000</span>
+						<span>IDR 420.000</span>
 					</h4>
 					<h4>
 						<span>Publisher</span>
@@ -268,28 +292,7 @@
 
 			<div class="clear"></div>
 
-			<div class="left" style="background-image: url(certificates/UC-NBB91FTN-min.jpg)"></div>			
-			<div class="right">
-				<h5>The Complete React Native and Redux Course</h5>
-				<div class="info">
-					<h4>
-						<span>Date</span>
-						<span>May 2018</span>
-					</h4>
-					<h4>
-						<span>Investation</span>
-						<span>IDR 1.305.000</span>
-					</h4>
-					<h4>
-						<span>Publisher</span>
-						<a target="_blank" href="//udemy.com">udemy.com</a>
-					</h4>
-				</div>
-			</div>
-
-			<div class="clear"></div>
-
-			<div class="left" style="background-image: url(certificates/UC-8VXKKD3I-min.jpg)"></div>			
+			<div class="left" style="background-image: url(certificates/UC-8VXKKD3I.jpeg)"></div>			
 			<div class="right">
 				<h5>Docker Mastery: The Complete Toolset From a Docker Captain</h5>
 				<div class="info">
@@ -299,7 +302,7 @@
 					</h4>
 					<h4>
 						<span>Investation</span>
-						<span>IDR 2.087.000</span>
+						<span>IDR 2.080.000</span>
 					</h4>
 					<h4>
 						<span>Publisher</span>
@@ -307,10 +310,94 @@
 					</h4>
 				</div>
 			</div>
+			
+			<div class="clear"></div>
+
+			<div class="left" style="background-image: url(certificates/UC-LKY8DQ0Y.jpeg)"></div>			
+			<div class="right">
+				<h5>Build Responsive Real World Websites with HTML5 and CSS3</h5>
+				<div class="info">
+					<h4>
+						<span>Date</span>
+						<span>July 2018</span>
+					</h4>
+					<h4>
+						<span>Investation</span>
+						<span>IDR 2.780.000 </span>
+					</h4>
+					<h4>
+						<span>Publisher</span>
+						<a target="_blank" href="//udemy.com">udemy.com</a>
+					</h4>
+				</div>
+			</div>
+
+			<div class="clear"></div>
+
+			<div class="left" style="background-image: url(certificates/UC-PS48YDIK.jpeg)"></div>
+			<div class="right">
+				<h5>Advanced CSS and Sass: Flexbox, Grid, Animations and More!</h5>
+				<div class="info">
+					<h4>
+						<span>Date</span>
+						<span>June 2018</span>
+					</h4>
+					<h4>
+						<span>Investation</span>
+						<span>IDR 2.710.000</span>
+					</h4>
+					<h4>
+						<span>Publisher</span>
+						<a target="_blank" href="//udemy.com">udemy.com</a>
+					</h4>
+				</div>
+			</div>
+
+			<div class="clear"></div>
+
+			<div class="left" style="background-image: url(certificates/UC-NBB91FTN.jpeg)"></div>			
+			<div class="right">
+				<h5>The Complete React Native and Redux Course</h5>
+				<div class="info">
+					<h4>
+						<span>Date</span>
+						<span>May 2018</span>
+					</h4>
+					<h4>
+						<span>Investation</span>
+						<span>IDR 1.300.000</span>
+					</h4>
+					<h4>
+						<span>Publisher</span>
+						<a target="_blank" href="//udemy.com">udemy.com</a>
+					</h4>
+				</div>
+			</div>
+
+			<div class="clear"></div>
+
+			<div class="left" style="background-image: url(certificates/UC-Y8YHIUDQ.jpeg)"></div>
+			<div class="right">
+				<h5>iOS 10 & Swift 3: From Beginner to Paid Professional™</h5>
+				<div class="info">
+					<h4>
+						<span>Date</span>
+						<span>January 2018</span>
+					</h4>
+					<h4>
+						<span>Investation</span>
+						<span>IDR 2.700.000</span>
+					</h4>
+					<h4>
+						<span>Publisher</span>
+						<a target="_blank" href="//udemy.com">udemy.com</a>
+					</h4>
+				</div>
+			</div>
 
 			<div class="clear"></div>
 			
-			<div class="left" style="background-image: url(certificates/UC-6BC0M94P-min.jpg)"></div>
+			<div class="left" style="background-image: url(certificates/UC-6BC0M94P.jpeg)"></div>
 			<div class="right">
 				<h5>Unity Game Development Academy: Make 2D & 3D Games</h5>
 				<div class="info">
@@ -320,11 +407,83 @@
 					</h4>
 					<h4>
 						<span>Investation</span>
-						<span>IDR 2.834.000</span>
+						<span>IDR 2.830.000</span>
 					</h4>
 					<h4>
 						<span>Publisher</span>
 						<a target="_blank" href="//udemy.com">udemy.com</a>
+					</h4>
+				</div>
+			</div>
+		</div>
+
+		<!-- 5th part of paper -->
+		<div class="separator">4. Free Certifications</div>
+		<div class="paper">
+			<div class="left crop" style="background-image: url(certificates/sfm.jpeg)"></div>
+			<div class="right free">
+				<h5>Scrum Fundamental Certified</h5>
+				<div class="info">
+					<h4>
+						<span>Date</span>
+						<span>December 2018</span>
+					</h4>
+					<h4>
+						<span>Publisher</span>
+						<a target="_blank" href="//scrumstudy.com">scrumstudy.com</a>
+					</h4>
+				</div>
+			</div>
+		</div>
+
+		<!-- 6th part of paper -->
+		<div class="separator">5. Free Webinars</div>
+		<div class="paper">
+			<div class="left" style="background-image: url(certificates/binus-1.jpeg)"></div>
+			<div class="right free">
+				<h5>Skill Education for New Generation Jobs</h5>
+				<div class="info">
+					<h4>
+						<span>Date</span>
+						<span>December 2017</span>
+					</h4>
+					<h4>
+						<span>Publisher</span>
+						<a target="_blank" href="//binus.ac.id">binus.ac.id</a>
+					</h4>
+				</div>
+			</div>
+
+			<div class="clear"></div>
+			
+			<div class="left" style="background-image: url(certificates/binus-2.jpeg)"></div>
+			<div class="right free">
+				<h5>Our ASEAN</h5>
+				<div class="info">
+					<h4>
+						<span>Date</span>
+						<span>November 2017</span>
+					</h4>
+					<h4>
+						<span>Publisher</span>
+						<a target="_blank" href="//binus.ac.id">binus.ac.id</a>
+					</h4>
+				</div>
+			</div>
+
+			<div class="clear"></div>
+			
+			<div class="left" style="background-image: url(certificates/binus-3.jpeg)"></div>
+			<div class="right free">
+				<h5>Social Consumer Protection</h5>
+				<div class="info">
+					<h4>
+						<span>Date</span>
+						<span>November 2017</span>
+					</h4>
+					<h4>
+						<span>Publisher</span>
+						<a target="_blank" href="//binus.ac.id">binus.ac.id</a>
 					</h4>
 				</div>
 			</div>
