--- a/index.html
+++ b/index.html
@@ -208,13 +208,34 @@
 		<!-- 4th part of paper -->
 		<div class="separator">3. Premium Course Certifications</div>
 		<div class="paper">
+			<div class="left" style="background-image: url(certificates/UC-Y29RCF0X.jpeg)"></div>
+			<div class="right">
+				<h5>Go: The Complete Developer's Guide (Golang)</h5>
+				<div class="info">
+					<h4>
+						<span>Date</span>
+						<span>October 2019</span>
+					</h4>
+					<h4>
+						<span>Investation</span>
+						<span>IDR 1.190.000</span>
+					</h4>
+					<h4>
+						<span>Publisher</span>
+						<a target="_blank" href="//udemy.com">udemy.com</a>
+					</h4>
+				</div>
+			</div>
+
+			<div class="clear"></div>
+
 			<div class="left" style="background-image: url(certificates/c1.jpeg)"></div>
 			<div class="right">
 				<h5>Agile Planning for Software Products</h5>
 				<div class="info">
 					<h4>
 						<span>Date</span>
-						<span>Januari 2019</span>
+						<span>January 2019</span>
 					</h4>
 					<h4>
 						<span>Financial Aid</span>
